--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,11 @@
         android:layout_alignParentEnd="true"
         android:text="Listen" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/listen"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
