--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,10 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@+id/action_main"
+        android:id="@+id/action_settings"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/action_main"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         tools:context="com.visio.MainActivity"
         />
 
