--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,17 @@
         android:id="@+id/wrapper"
         ></FrameLayout>
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
+        android:orientation="vertical"
+        android:id="@+id/switch_container"
+        tools:context=".EdisonLauncher">
+    </LinearLayout>
+
+
 
 </RelativeLayout>
